package com.example.keystone_try.ui.OnBoarding;

public class OnBoardingItem {

    private int image;
    private int title;
    private int description;

    public int getImage() {
        return image;
    }

    public void setImage(int image) {
        this.image = image;
    }
//
//    public int getTitle() {
//        return title;
//    }
//
//    public void setTitle(int title) {
//        this.title = title;
//    }
//
//    public int getDescription() {
//        return description;
//    }
//
//    public void setDescription(int description) {        this.description = description;    }
}
