@startuml

title __ONBOARDING's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace ui {
      namespace OnBoarding {
        class com.example.keystone_try.ui.OnBoarding.LoginActivity {
            - buttonOnboardingAction : MaterialButton
            - buttonOnboardingSkip : MaterialButton
            - layoutOnBoardingIndicators : LinearLayout
            + getUUID()
            # onCreate()
            - setCurrentOnboardingIndicator()
            - setUpOnboardingItems()
            - setupOnboardingTndicators()
            - skipOnBoardingpgae()
            - startOnBoardingpage()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace ui {
      namespace OnBoarding {
        class com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter {
            - onBoardingItems : List<OnBoardingItem>
            + OnBoardingAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace ui {
      namespace OnBoarding {
        class com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter.OnbarodingViewHolder {
            - imageOnBoarding : ImageView
            + OnbarodingViewHolder()
            ~ setOnBoardingData()
        }
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace ui {
      namespace OnBoarding {
        class com.example.keystone_try.ui.OnBoarding.OnBoardingItem {
            - description : int
            - image : int
            - title : int
            + getImage()
            + setImage()
        }
      }
    }
  }
  

  com.example.keystone_try.ui.OnBoarding.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.keystone_try.ui.OnBoarding.LoginActivity o-- com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter : onBoardingAdapter
  com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter +-down- com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter.OnbarodingViewHolder
  com.example.keystone_try.ui.OnBoarding.OnBoardingAdapter.OnbarodingViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
